set template debug to default to false in sample localsettings, since we require that for fedora_access template tag
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@43 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/localsettings.py.sample
+++ b/genrepo/localsettings.py.sample
@@ -2,7 +2,7 @@
 
 # all settings in debug section should be false in production environment
 DEBUG = True
-TEMPLATE_DEBUG = DEBUG
+TEMPLATE_DEBUG = False # set to false for fedora_access template tags
 DEV_ENV = True
 
 ADMINS = (
